--- a/solr_cloud.yaml
+++ b/solr_cloud.yaml
@@ -1,6 +1,3 @@
-###########################
-# 3. SolrCloud (NO TLS, NO DNS, LoadBalancer for browser access)
-###########################
 apiVersion: solr.apache.org/v1beta1
 kind: SolrCloud
 metadata:
@@ -20,18 +17,23 @@ spec:
             requests:
               storage: 2Gi
       reclaimPolicy: Delete
+
   solrAddressability:
     external:
-      method: LoadBalancer
+      method: Ingress                  
+      domainName: dummy.local         
       useExternalAddress: true
     podPort: 8983
+
   solrSecurity:
     authenticationType: Basic
+
   updateStrategy:
     method: Managed
     managed:
       maxPodsUnavailable: 2
       maxShardReplicasUnavailable: 2
+
   zookeeperRef:
     provided:
       replicas: 3
@@ -45,4 +47,3 @@ spec:
           resources:
             requests:
               storage: 2Gi
-
