--- a/helm_release.yaml
+++ b/helm_release.yaml
@@ -1,7 +1,4 @@
-###########################
-# 2. HelmRelease for Solr Operator
-###########################
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: solr-operator
@@ -9,6 +6,12 @@ metadata:
 spec:
   releaseName: solr-operator
   interval: 5m
+  timeout: 5m
+  install:
+    createNamespace: true
+    crds: Create
+  upgrade:
+    crds: CreateReplace
   chart:
     spec:
       chart: solr-operator
@@ -17,7 +20,3 @@ spec:
         kind: HelmRepository
         name: apache-solr-charts
         namespace: flux-system
-  install:
-    crds: Create
-  upgrade:
-    crds: CreateReplace
