--- a/solr_cloud.yaml
+++ b/solr_cloud.yaml
@@ -1,49 +1,26 @@
 apiVersion: solr.apache.org/v1beta1
 kind: SolrCloud
 metadata:
-  name: explore
-  namespace: solr
+  name: my-solrcloud
+  namespace: solr1
 spec:
-  replicas: 3
+  replicas: 2
   solrImage:
     repository: solr
-    tag: 8.8.2
-  solrJavaMem: "-Xms500M -Xmx510M"
-  dataStorage:
-    persistent:
-      pvcTemplate:
-        spec:
-          resources:
-            requests:
-              storage: 2Gi
-      reclaimPolicy: Delete
-
-  solrAddressability:
-    external:
-      method: Ingress                  
-      domainName: dummy.local         
-      useExternalAddress: true
-    podPort: 8983
-
-  solrSecurity:
-    authenticationType: Basic
-
-  updateStrategy:
-    method: Managed
-    managed:
-      maxPodsUnavailable: 2
-      maxShardReplicasUnavailable: 2
-
+    tag: 9.5.0
+  customSolrKubeOptions:
+    podOptions:
+      labels:
+        solr-cloud: my-solrcloud
+        technology: solr-cloud
   zookeeperRef:
     provided:
       replicas: 3
-      image:
-        repository: pravega/zookeeper
-        tag: 0.2.9
       persistence:
-        reclaimPolicy: Delete
         spec:
-          accessModes: [ReadWriteOnce]
+          accessModes:
+            - ReadWriteOnce
           resources:
             requests:
-              storage: 2Gi
+              storage: 5Gi
+
