--- a/solr-loadbalancer.yaml
+++ b/solr-loadbalancer.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: solr-external
-  namespace: solr
+  name: solr-admin-lb
+  namespace: solr1
 spec:
   type: LoadBalancer
   selector:
-    app: solrcloud
-    solr-cloud: explore
+    solr-cloud: my-solrcloud
+    technology: solr-cloud
   ports:
     - name: solr
       port: 8983
       targetPort: 8983
-      protocol: TCP
+
