--- a/solr_cloud.yaml
+++ b/solr_cloud.yaml
@@ -11,7 +11,7 @@ spec:
   customSolrKubeOptions:
     podOptions:
       labels:
-        solr-cloud: my-solrcloud
+        solr-cloud: my-solrcloud ###
         technology: solr-cloud
   zookeeperRef:
     provided:
