--- a/solr_cloud.yaml
+++ b/solr_cloud.yaml
@@ -1,7 +1,7 @@
 apiVersion: solr.apache.org/v1beta1
 kind: SolrCloud
 metadata:
-  name: my-solrcloud
+  name: my-solrcloud-v2
   namespace: solr1
 spec:
   replicas: 2
@@ -11,7 +11,7 @@ spec:
   customSolrKubeOptions:
     podOptions:
       labels:
-        solr-cloud: my-solrcloud ###
+        solr-cloud: my-solrcloud-v2 ###
         technology: solr-cloud
   zookeeperRef:
     provided:
