--- a/solr-loadbalancer.yaml
+++ b/solr-loadbalancer.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: LoadBalancer  #####
   selector:
-    solr-cloud: my-solrcloud
+    solr-cloud: my-solrcloud-v2
     technology: solr-cloud
   ports:
     - name: solr
