--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -4,5 +4,5 @@
 resources:
   - helm_repository.yaml
   - helm_release.yaml
-  - solr_cloud.yaml
+  - solr_cloud.yaml ##
   - solr-loadbalancer.yaml
