--- a/helm_repository.yaml
+++ b/helm_repository.yaml
@@ -4,7 +4,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: apache-solr-chart
+  name: apache-solr-chart ###
   namespace: flux-system
 spec:
   interval: 10m
