--- a/helm_repository.yaml
+++ b/helm_repository.yaml
@@ -1,7 +1,7 @@
 ###########################
 # 1. HelmRepository
 ##########################################
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: apache-solr-chart ###
