--- a/helm_release.yaml
+++ b/helm_release.yaml
@@ -19,4 +19,4 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: apache-solr-chart
-        namespace: flux-system
+        namespace: solr3
