--- a/helm_repository.yaml
+++ b/helm_repository.yaml
@@ -5,7 +5,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: apache-solr-chart ###
-  namespace: flux-system
+  namespace: solr3
 spec:
   interval: 10m
   url: https://solr.apache.org/charts
