--- a/helm_repository.yaml
+++ b/helm_repository.yaml
@@ -5,7 +5,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: apache-solr-chart ##########
-  namespace: solr3
+  namespace: flux-system
 spec:
   interval: 10m
   url: https://solr.apache.org/charts
