Pod Anti Affinity & Pvc

--- a/solr-cloud/solr_cloud.yaml
+++ b/solr-cloud/solr_cloud.yaml
@@ -21,37 +21,39 @@ spec:
               storage: 10Gi
           storageClassName: default
 
-  # --- CORRECTED SECTION ---
-  # Use podTemplate for general pod configuration, including affinity and volume mounts
-  podTemplate:
-    metadata:
-      labels: # Labels for the SolrCloud pods
-        solr-cloud: my-solrcloud-v9
-        technology: solr-cloud
-    spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: solr-cloud
-                    operator: In
-                    values:
-                      - my-solrcloud-v9
-              topologyKey: "kubernetes.io/hostname"
-      containers:
-        - name: solr # This name is usually fixed for the main Solr container
-          volumeMounts:
-            - name: data # The 'data' volume is typically provided by the Solr operator via dataStorage
-              mountPath: /var/solr
-          # You might also want to add resource limits/requests here for the solr container
-          # resources:
-          #   requests:
-          #     cpu: "500m"
-          #     memory: "1Gi"
-          #   limits:
-          #     cpu: "1"
-          #     memory: "2Gi"
+  # --- CORRECTED SECTION BASED ON DOCS ---
+  customSolrKubeOptions:
+    podOptions:
+      # Pod metadata (labels, annotations) for the SolrCloud pods
+      metadata:
+        labels:
+          solr-cloud: my-solrcloud-v9
+          technology: solr-cloud
+      # The 'spec' of the pod. This is where affinity, containers, etc., go.
+      spec:
+        affinity:
+          podAntiAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              - labelSelector:
+                  matchExpressions:
+                    - key: solr-cloud
+                      operator: In
+                      values:
+                        - my-solrcloud-v9
+                topologyKey: "kubernetes.io/hostname"
+        containers:
+          - name: solr # This name is usually fixed for the main Solr container
+            volumeMounts:
+              - name: data # The 'data' volume is typically provided by the Solr operator via dataStorage
+                mountPath: /var/solr
+            # You can also add resource limits/requests here if desired:
+            # resources:
+            #   requests:
+            #     cpu: "500m"
+            #     memory: "1Gi"
+            #   limits:
+            #     cpu: "1"
+            #     memory: "2Gi"
   # --- END CORRECTED SECTION ---
 
   zookeeperRef:
