--- a/solr-cloud/solr_cloud.yaml
+++ b/solr-cloud/solr_cloud.yaml
@@ -9,52 +9,27 @@ spec:
     repository: solr
     tag: 9.5.0
 
-  # Persistent data storage using PVCs
+  # Use persistent PVC-based storage for Solr data
   dataStorage:
     persistent:
       reclaimPolicy: Retain
       pvcTemplate:
         spec:
-          accessModes: [ "ReadWriteOnce" ]
+          accessModes: ["ReadWriteOnce"]
           resources:
             requests:
               storage: 10Gi
-          storageClassName: default
+          storageClassName: default  # Adjust if you're using a different class
 
-  # --- CORRECTED SECTION BASED ON DOCS ---
+  # Optional labels and volume mount
   customSolrKubeOptions:
     podOptions:
-      # Pod metadata (labels, annotations) for the SolrCloud pods
-      metadata:
-        labels:
-          solr-cloud: my-solrcloud-v9
-          technology: solr-cloud
-      # The 'spec' of the pod. This is where affinity, containers, etc., go.
-      spec:
-        affinity:
-          podAntiAffinity:
-            requiredDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
-                  matchExpressions:
-                    - key: solr-cloud
-                      operator: In
-                      values:
-                        - my-solrcloud-v9
-                topologyKey: "kubernetes.io/hostname"
-        containers:
-          - name: solr # This name is usually fixed for the main Solr container
-            volumeMounts:
-              - name: data # The 'data' volume is typically provided by the Solr operator via dataStorage
-                mountPath: /var/solr
-            # You can also add resource limits/requests here if desired:
-            # resources:
-            #   requests:
-            #     cpu: "500m"
-            #     memory: "1Gi"
-            #   limits:
-            #     cpu: "1"
-            #     memory: "2Gi"
-  # --- END CORRECTED SECTION ---
+      volumeMounts:
+        - name: data
+          mountPath: /var/solr
+      labels:
+        solr-cloud: my-solrcloud-v9
+        technology: solr-cloud
 
   zookeeperRef:
     provided:
@@ -66,3 +41,4 @@ spec:
           resources:
             requests:
               storage: 5Gi
+
